force-app/main/default/objects/MktCategoria__c/MktCategoria__c.object-meta.xml
<CustomObject>
    <label>Categoria</label>
    <nameField>
        <label>Categoria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorias</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>