force-app/main/default/objects/MktCategoria__c/fields/Apresentacao__c.field-meta.xml
<CustomField>
    <fullName>Apresentacao__c</fullName>
    <label>Apresentação</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>