force-app/main/default/objects/MktCategoria__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo em Marketing</label>
    <type>Checkbox</type>
</CustomField>