force-app/main/default/objects/MktCategoria__c/fields/Ativo_site__c.field-meta.xml
<CustomField>
    <fullName>Ativo_site__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo em Website</label>
    <type>Checkbox</type>
</CustomField>