force-app/main/default/objects/MktCategoria__c/fields/Capa__c.field-meta.xml
<CustomField>
    <fullName>Capa__c</fullName>
    <label>Capa</label>
    <type>Url</type>
</CustomField>