force-app/main/default/objects/MktCategoria__c/fields/catalogo_de_precos_exibicao__c.field-meta.xml
<CustomField>
    <fullName>catalogo_de_precos_exibicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catálogo de preços de Exibição</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Categorias</relationshipLabel>
    <relationshipName>Categorias</relationshipName>
    <type>Lookup</type>
</CustomField>