force-app/main/default/objects/MktCategoria__c/fields/Categoria_Pai__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Pai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoria Pai</label>
    <referenceTo>MktCategoria__c</referenceTo>
    <relationshipLabel>Sub Categorias</relationshipLabel>
    <relationshipName>Categorias</relationshipName>
    <type>Lookup</type>
</CustomField>