force-app/main/default/objects/MktCategoria__c/fields/Destaque__c.field-meta.xml
<CustomField>
    <fullName>Destaque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destaque</label>
    <type>Checkbox</type>
</CustomField>