force-app/main/default/objects/MktCategoria__c/fields/Ficha_T_cnica__c.field-meta.xml
<CustomField>
    <fullName>Ficha_T_cnica__c</fullName>
    <label>Ficha Técnica</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>