force-app/main/default/objects/MktCategoria__c/fields/Icone__c.field-meta.xml
<CustomField>
    <fullName>Icone__c</fullName>
    <label>Icone</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>