force-app/main/default/objects/MktCategoria__c/fields/Icone_mini__c.field-meta.xml
<CustomField>
    <fullName>Icone_mini__c</fullName>
    <formula>IF(
    ISBLANK(Icone_url__c),
    IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0155A000009y8x0&amp;oid=00Di0000000JVhH&amp;lastMod=1544439560000&quot; , &quot;&quot;, 125, 166),
    IMAGE(Icone_url__c , &quot;&quot;, 125, 166)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icone</label>
    <type>Text</type>
</CustomField>