force-app/main/default/objects/MktCategoria__c/fields/Icone_url__c.field-meta.xml
<CustomField>
    <fullName>Icone_url__c</fullName>
    <label>Icone</label>
    <type>Url</type>
</CustomField>