force-app/main/default/objects/MktCategoria__c/fields/idiomas_de_exibicao__c.field-meta.xml
<CustomField>
    <fullName>idiomas_de_exibicao__c</fullName>
    <label>Idioma de exibição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Idiomas</valueSetName>
    </valueSet>
</CustomField>