force-app/main/default/objects/MktCategoria__c/fields/Imagem_Produto_02__c.field-meta.xml
<CustomField>
    <fullName>Imagem_Produto_02__c</fullName>
    <label>Imagem Produto 02</label>
    <type>Url</type>
</CustomField>