force-app/main/default/objects/MktCategoria__c/fields/landingpage01__c.field-meta.xml
<CustomField>
    <fullName>landingpage01__c</fullName>
    <label>Landingpage 01 (Esquerda)</label>
    <type>Url</type>
</CustomField>