force-app/main/default/objects/MktCategoria__c/fields/Vet__c.field-meta.xml
<CustomField>
    <fullName>Vet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vet</label>
    <type>Checkbox</type>
</CustomField>