force-app/main/default/objects/MktCategoria__c/validationRules/Preenche_ao_menos_uma_referencia_pai.validationRule-meta.xml
<ValidationRule>
    <fullName>Preenche_ao_menos_uma_referencia_pai</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Marca__c == null,
    Categoria_Pai__c  == null
)</errorConditionFormula>
    <errorMessage>Relacione a uma MARCA ou a uma CATEGORIA PAI.</errorMessage>
</ValidationRule>