force-app/main/default/objects/MktCategoria__c/validationRules/Preenche_somente_uma_referencia_pai.validationRule-meta.xml
<ValidationRule>
    <fullName>Preenche_somente_uma_referencia_pai</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Marca__c != null,
    Categoria_Pai__c  != null
)</errorConditionFormula>
    <errorMessage>Relacione somente a uma MARCA ou CATEGORIA PAI, e não ambas.</errorMessage>
</ValidationRule>