force-app/main/default/objects/MktCategoria__c/listViews/Categorias_Iniciais_site.listView-meta.xml
<ListView>
    <fullName>Categorias_Iniciais_site</fullName>
    <columns>NAME</columns>
    <columns>Icone_mini__c</columns>
    <columns>Ativo__c</columns>
    <columns>Ativo_site__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Categoria_Pai__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Ativo_site__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Categorias Iniciais do site</label>
</ListView>