force-app/main/default/objects/MktCategoria__c/listViews/Todas_categorias.listView-meta.xml
<ListView>
    <fullName>Todas_categorias</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>Ativo_site__c</columns>
    <columns>Categoria_Pai__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas categorias</label>
</ListView>